# cli

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cc
cmake/: Debug.cmake  Warnings.cmake
configured/: config.hpp.in
debian/: changelog  control  debhelper-build-stamp  rules
lib/: CMakeLists.txt
lib/cli/: CMakeLists.txt  cli.cc  cli.hpp
lib/commands/: CMakeLists.txt  commands.cc  commands.hpp
lib/logger/: CMakeLists.txt  logger.cc  logger.hpp
